2005-02-15  Peter Bartok  <pbartok@novell.com>

	* Makefile: Removed resources as automatic target; to build
	  .resource files 'make resources' must be invoked. This removes
	  the libgdiplus installed requirement. Instead, the compiled files
	  are checked in as well.

2005-02-13  Peter Bartok  <pbartok@novell.com>

	* System.Windows.Forms.dll.sources: Added SelectionRangeConverter.cs,
	  OpacityConverter.cs, KeysConverter.cs, Hwnd.cs
	* System.Windows.Forms.dll.resources: Added 
	* Makefile: Added support for generating resources

2005-02-12  Geoff Norton  <gnorton@customerdna.com>

	* System.Windows.Forms.dll.sources: Added ResXNullRef.cs
	
2005-02-03  Peter Bartok  <pbartok@novell.com>

	* System.Windows.Forms.dll.Sources: Added ComponentModel.cs and
	  PropertyGridView.cs

2005-01-30  John BouAntoun  <jba-mono@optusnet.com.au>

	* System.Windows.Forms.dll.Sources: Added DateTimePicker.cs and
	  DateTimePickerFormat.cs
	  
2005-01-29  Peter Bartok  <pbartok@novell.com>

	* System.Windows.Forms.dll.Sources: Added ArrangeDirection.cs and
	  ArrangeStartingPosition.cs
	* SWF.csproj: Updated

2005-01-28  Peter Bartok  <pbartok@novell.com>

	* SWF.csproj: Updated with all the latest files
	* build-csproj: Added, allows to autogenerate SWF.csproj
	* Makefile: Added rule to automatically call build-csproj (Thanks
	  to Geoff Norton for review and a simpler rule)

2005-01-26  Peter Bartok  <pbartok@novell.com>

	* System.Windows.Forms.dll.Sources: Added GridEntry.cs,
	  GridItem.cs, GridItemCollection.cs, GridItemType.cs,
	  PropertyGrid.cs, PropertySort.cs, PropertyTabChangedEventArgs.cs,
	  PropertyTabChangedEventHandler.cs, PropertyValueChangedEventArgs.cs
	  PropertyValueChangedEventHandler.cs, 
	  SelectedGridItemChangedEventArgs.cs,
	  SelectedGridItemChangedEventHandler.cs

2005-01-26  Peter Bartok  <pbartok@novell.com>

	* System.Windows.Forms.dll.Sources: Added NotifyIcon.cs

2005-01-16  Peter Bartok  <pbartok@novell.com>
